# discover

./: CMakeLists.txt
discover/qml/: SearchPage.qml
libdiscover/backends/AkabeiBackend/: AkabeiBackend.cpp  AkabeiBackend.h  AkabeiNotifier.cpp  AkabeiNotifier.h  AkabeiQuestion.cpp  AkabeiQuestion.h  AkabeiResource.cpp  AkabeiResource.h  AkabeiTransaction.cpp  AkabeiTransaction.h  AkabeiUpdater.cpp  AkabeiUpdater.h  AppAkabeiResource.cpp  AppAkabeiResource.h  AppstreamUtils.cpp  AppstreamUtils.h  CMakeLists.txt
